# SpringBud

./: README.md  build.gradle  settings.gradle
JavaTest/src/main/java/com/fallgod/javatest/: Test.java
app/: .gitignore  build.gradle
app/src/androidTest/java/com/fallgod/springbud/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/fallgod/springbud/: App.java  Constants.java  MainActivity.java
app/src/main/java/com/fallgod/springbud/callback/: ELiveData.java  Event.java  EventLiveData.java  EventObserver.java
app/src/main/java/com/fallgod/springbud/data/: AppDatabase.java  CalendarRepository.java  NativeBean.java
app/src/main/java/com/fallgod/springbud/data/Repository/: CalendarRepository.java
app/src/main/java/com/fallgod/springbud/data/bean/: CalendarScheme.java
app/src/main/java/com/fallgod/springbud/data/dao/: CalendarSchemeDao.java
app/src/main/java/com/fallgod/springbud/data/repository/: CalendarRepository.java
app/src/main/java/com/fallgod/springbud/data/sp/: SharedPrefHelper.java
app/src/main/java/com/fallgod/springbud/jni/: NativeBean.java
app/src/main/java/com/fallgod/springbud/network/: HttpRequest.java
app/src/main/java/com/fallgod/springbud/ui/: BaseActivity.java  MainActivity.java  MainViewModel.java
app/src/main/java/com/fallgod/springbud/ui/activity/: MainActivity.java  SettingActivity.kt
app/src/main/java/com/fallgod/springbud/ui/base/: BaseActivity.java  (+5 more)
app/src/main/java/com/fallgod/springbud/util/: CodecUtil.java  FileUtil.java  JsonUtil.java  LogUtil.java
app/src/main/res/drawable/: selector_back.xml  shape_drawer_head_bg.xml
app/src/main/res/layout/: activity_main.xml  activity_setting.xml  dialog_calendar_attendance.xml  fragment_calendar.xml  fragment_weather.xml  navi_view_header.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/menu/: navi_view_menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/res/values-v23/: styles.xml
app/src/test/java/com/fallgod/springbud/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
testopengl/: build.gradle
testopengl/src/androidTest/java/com/fallgod/testopengl/: ExampleInstrumentedTest.java
testopengl/src/main/: AndroidManifest.xml
testopengl/src/main/cpp/: CMakeLists.txt  native-lib.cpp
testopengl/src/main/cpp/ffmpeg/include/libavutil/: ffversion.h
testopengl/src/main/cpp/media/: one_frame.h  player.cpp  player.h
testopengl/src/main/cpp/media/decoder/: base_decoder.cpp  base_decoder.h  decode_state.h  i_decoder.h
testopengl/src/main/cpp/media/decoder/audio/: a_decoder.cpp  a_decoder.h
testopengl/src/main/cpp/media/decoder/video/: v_decoder.cpp  v_decoder.h
testopengl/src/main/cpp/media/player/def_player/: player.cpp  player.h
testopengl/src/main/cpp/media/player/gl_player/: gl_player.cpp  gl_player.h
testopengl/src/main/cpp/media/render/audio/: audio_render.h  opensl_render.cpp  opensl_render.h
testopengl/src/main/cpp/media/render/video/: video_render.h
testopengl/src/main/cpp/media/render/video/native_render/: native_render.cpp  native_render.h
testopengl/src/main/cpp/media/render/video/opengl_render/: opengl_render.cpp  opengl_render.h
testopengl/src/main/cpp/opengl/drawer/: drawer.cpp  drawer.h  video_drawer.cpp  video_drawer.h
testopengl/src/main/cpp/opengl/drawer/proxy/: def_drawer_proxy_impl.cpp  def_drawer_proxy_impl.h  drawer_proxy.cpp  drawer_proxy.h
testopengl/src/main/cpp/opengl/egl/: egl_core.cpp  egl_core.h  egl_surface.cpp  egl_surface.h
testopengl/src/main/cpp/utils/: const.h  logger.h  timer.c
testopengl/src/main/java/com/fallgod/testopengl/: AutoFitTextureView.java  FFmpegActivity.java  MainActivity.java  MainActivity2.java  MyGlSurfaceView.java
testopengl/src/main/java/com/fallgod/testopengl/render/: PointRender.java  RectangleRenderer.java  TriangleRenderer.java
testopengl/src/main/java/com/fallgod/testopengl/ui/: AutoFitTextureView.java  FFmpegActivity.java  MainActivity2.java  OpenGLActivity.java
testopengl/src/main/java/com/fallgod/testopengl/util/: LogUtil.java
testopengl/src/main/res/layout/: activity_ffmpeg.xml  activity_main.xml  activity_main2.xml  activity_open_gl.xml
testopengl/src/main/res/values/: strings.xml
testopengl/src/main/res/values-v23/: styles.xml
testopengl/src/test/java/com/fallgod/testopengl/: ExampleUnitTest.java
testplayer/src/main/java/com/fallgod/testplayer/: MyPlayer.java
(+18 files in other folders)
